Complete Assignment 4 Order Service
